2008-05-22  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationHost.cs: changed CreateDeprecatedConfigContext
	to return a new HttpContext object. This is part of a fix for bug 
	#325128. Patch contributed by James Fitzsimons <james.fitzsimons@gmail.com>,
	thanks!

2008-05-07  Marek Habersack  <mhabersack@novell.com>

	* RoleManagerSection.cs: use type converter when creating the
	cookieTimeout property in the static constructor. Fixes bug
	#387526. Patch fromIvan Hamilton <ivan@chimerical.com.au>, thanks! 

2008-03-23  Dean Brettle <dean@brettle.com>

	* CapabilitiesBuild.cs (Process), ICapabilitiesProcess.cs (Process),
	nBrowser/Build.cs (Process): Added initialCapabilities argument to 
	facilitate using browscap.ini capabilities.
	
	* CapabilitiesResult.cs (ctor), nBrowserResult.cs (ctor): Change 
	items arg to IDictionary to	facilitate using browscap.ini capabilities.
	
	* nBrowser/Node.cs (Reset): Removed code which checked prohibited 
	non-alphanumerics in id attributes because .NET is not that strict.
	
	* nBrowser/Node.cs (MergeFrom): Fixed NullReferenceExceptions that
	occurred when the source or destination node did not have any
	capabilities or adapters.
	
	* nBrowser/Result.cs (AddAdapter): Fixed to allow types in other
	assemblies.

2008-03-09  Dean Brettle <dean@brettle.com> 

	* nBrowser/Result.cs, nBrowser/NodeTypes.cs, nBrowser/Identification.cs,
	nBrowser/File.cs, nBrowser/Build.cs, nBrowser/Node.cs, 
	nBrowser/Exception.cs: added.  The code under nBrowser handles *.browser
	files.  It is based on Owen "Ocean" Brady's code, with the following 
	changes and improvements.  Replaced Result.Adapter 
	property with AdapterTypeMap property which maps control Type to adapter
	Type.  Added Result.MarkupTextWriter property.  Added overrides for
	Result.GetAdapters and Result.GetTagWriter to return MarkupTextWriter
	and AdapterTypeMap, resp.  Changed tree building algorithm to not