@@ -54,26 +54,9 @@ namespace System.Web.Configuration.nBrowser
 		/// </summary>
 		/// <param name="controlTypeName"></param>
 		/// <param name="adapterTypeName"></param>
-		internal void AddAdapter(string controlTypeName, string adapterTypeName)
+		internal void AddAdapter(Type controlType, Type adapterType)
 		{
-			Type controlType = FindType(controlTypeName);
-			Type adapterType = FindType(adapterTypeName);
 			AdapterTypeMap[controlType] = adapterType;
-		}
-		
-		private Type FindType(string typeName)
-		{
-			foreach (System.Reflection.Assembly a in System.AppDomain.CurrentDomain.GetAssemblies())
-			{
-				string fullTypeName = typeName + "," + a.FullName;
-				Type t = System.Type.GetType(fullTypeName); // case-sensitive
-				if (t != null)
-					return t;
-				t = System.Type.GetType(fullTypeName, false, true); // case-insensitive
-				if (t != null)
-					return t;
-			}
-			throw new TypeLoadException(typeName);
 		}
 		
 		/// <summary>
